--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,61 @@
-plugins {
-    id 'org.springframework.boot' version '2.4.1'
-    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-    id 'java'
+buildscript {
+    repositories {
+        // https://repo.maven.apache.org/maven2
+        mavenCentral()
+    }
 }
 
-group = 'io.github.imsejin'
-version = '0.1.0'
-sourceCompatibility = '11'
+plugins {
+    id 'java'
+    id 'org.springframework.boot' version '2.4.1'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+}
+
+allprojects {
+    group = 'io.github.imsejin.study.springframework'
+    version = '0.1.0'
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+    }
+}
+
+subprojects {
+    dependencies {
+        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+
+        /*
+        spring-boot v2.3 이후로 "spring-boot-starter-web", "spring-boot-starter-webflux"가
+        "spring-boot-starter-validation"를 포함하지 않는다.
+        (https://www.youtube.com/watch?v=cP8TwMV4LjE&t=70s)
+         */
+        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
+
+        testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
+            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        }
+        compileOnly group: 'org.projectlombok', name: 'lombok'
+        annotationProcessor group: 'org.projectlombok', name: 'lombok'
+        testCompileOnly group: 'org.projectlombok', name: 'lombok'
+        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok'
+    }
+
+    test {
+        useJUnitPlatform()
+    }
+}
 
 configurations {
     compileOnly {
@@ -14,29 +63,10 @@ configurations {
     }
 }
 
-repositories {
-    // https://repo.maven.apache.org/maven2/
-    mavenCentral()
+bootJar {
+    enabled = false
 }
 
-dependencies {
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-
-    /*
-    spring-boot v2.3 이후로 "spring-boot-starter-web", "spring-boot-starter-webflux"가
-    "spring-boot-starter-validation"를 포함하지 않는다.
-    (https://www.youtube.com/watch?v=cP8TwMV4LjE&t=70s)
-     */
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
-
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    compileOnly group: 'org.projectlombok', name: 'lombok'
-    annotationProcessor group: 'org.projectlombok', name: 'lombok'
-    testCompileOnly group: 'org.projectlombok', name: 'lombok'
-    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok'
-}
-
-test {
-    useJUnitPlatform()
+jar {
+    enabled = true
 }
