🚿 Clean up: code

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ allprojects {
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
+    // apply plugin: 'idea'
+    // apply plugin: 'eclipse'
 
     repositories {
         mavenLocal()
