--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'study-springframework'
-include ':study-core'
-include ':study-webmvc'
+include ':spring-core'
+include ':spring-webmvc'
