--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.nio.charset.StandardCharsets
+
 buildscript {
     repositories {
         // https://repo.maven.apache.org/maven2
@@ -19,7 +21,7 @@ allprojects {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
 
-    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+    [compileJava, compileTestJava]*.options*.encoding = StandardCharsets.UTF_8
 
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
