--- a/spring-security/build.gradle
+++ b/spring-security/build.gradle
@@ -1,8 +1,17 @@
+import gradle.build.custom.Version
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // Database
     runtimeOnly 'com.h2database:h2'
+
+    // JWT
+    implementation "io.jsonwebtoken:jjwt-api:$Version.JWT"
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:$Version.JWT"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:$Version.JWT"
 
     testImplementation 'org.springframework.security:spring-security-test'
 }
