--- a/spring-security/build.gradle
+++ b/spring-security/build.gradle
@@ -5,10 +5,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-//    implementation 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
-    // Database
+    // H2 Database
     runtimeOnly 'com.h2database:h2'
 
     // JWT
