--- a/spring-batch/build.gradle
+++ b/spring-batch/build.gradle
@@ -1,5 +1,9 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'mysql:mysql-connector-java'
 
     testImplementation 'org.springframework.batch:spring-batch-test'
 }
