--- a/spring-batch/src/main/resources/application-dev.yml
+++ b/spring-batch/src/main/resources/application-dev.yml
@@ -3,10 +3,12 @@ spring:
 
   datasource:
     hikari:
-      jdbc-url: jdbc:mysql://oneplat.asuscomm.com:3306/pkqss_mgmt_db?serverTimezone=Asia/Seoul&useSSL=false&allowMultiQueries=true
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      username: admin
-      password: dbfrhrfh1rk!
+      # jdbc-url: jdbc:mysql://localhost:3306/study_db?serverTimezone=Asia/Seoul
+      # driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mariadb://localhost:3306/study_db?serverTimezone=Asia/Seoul
+      driver-class-name: org.mariadb.jdbc.Driver
+      username: root
+      password: admin1!
       connection-test-query: SELECT 1
 
   batch:
