--- a/spring-batch/src/main/resources/application-local.yml
+++ b/spring-batch/src/main/resources/application-local.yml
@@ -6,7 +6,7 @@ spring:
 
   datasource:
     hikari:
-      jdbc-url: jdbc:h2:mem:test-db
+      jdbc-url: jdbc:h2:mem:test-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MariaDB
       driver-class-name: org.h2.Driver
       username: sa
       password:
