--- a/spring-batch/src/main/resources/application-local.yml
+++ b/spring-batch/src/main/resources/application-local.yml
@@ -6,8 +6,12 @@ spring:
 
   datasource:
     hikari:
-      jdbc-url: jdbc:h2:mem:test-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MariaDB
+      jdbc-url: jdbc:h2:mem:test-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL
       driver-class-name: org.h2.Driver
       username: sa
       password:
       connection-test-query: SELECT 1
+
+  batch:
+    job:
+      enabled: false
