--- a/spring-batch/src/main/resources/application-rdbms.yml
+++ b/spring-batch/src/main/resources/application-rdbms.yml
@@ -1,9 +1,9 @@
 spring:
-  config.activate.on-profile: dev
+  config.activate.on-profile: rdbms
 
   datasource:
     hikari:
-      # jdbc-url: jdbc:mysql://localhost:3306/study_db?serverTimezone=Asia/Seoul
+      # jdbc-url: jdbc:mysql://localhost:3306/study?serverTimezone=Asia/Seoul
       # driver-class-name: com.mysql.cj.jdbc.Driver
       jdbc-url: jdbc:mariadb://localhost:3306/study?serverTimezone=Asia/Seoul
       driver-class-name: org.mariadb.jdbc.Driver
@@ -13,7 +13,7 @@ spring:
 
   batch:
     job:
-#      enabled: false
+      enabled: true
       # If a program argument "job.name" is given, springframework assigns it to "spring.batch.job.name",
       # otherwise "NONE" to that by default value. When "spring.batch.job.name" is "NONE", no batch job runs.
       names: ${job.name:NONE}
