--- a/lombok.config
+++ b/lombok.config
@@ -1,3 +1,4 @@
 # see https://projectlombok.org/features/constructor lombok.copyableAnnotations
 lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Value
 lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Qualifier
+lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Autowired
