--- a/lombok.config
+++ b/lombok.config
@@ -2,3 +2,7 @@
 lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Value
 lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Qualifier
 lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Autowired
+lombok.copyableAnnotations += org.springframework.context.annotation.Lazy
+
+lombok.var.flagUsage = ERROR
+lombok.val.flagUsage = ERROR
